<resources>
    <string name="app_name">My Application</string>

    <string name="button_menu">MENU</string>
    <string name="button_view_order">VIEW ORDER</string>

    <string name="bbq_button">BBQ</string>
    <string name="fast_food_button">FAST FOOD</string>
    <string name="chinese_button">CHINESE</string>
    <string name="sea_food_button">SEA FOOD</string>

    <string name="food1_name">Spiced Fish</string>

    <string name="price">Rs. 250</string>

    <string name="food1_desc">This simple baked fish is rubbed with a flavour-packed paste made by blitzing coriander, cumin, garlic, green chilli, ginger, shallot and garam masala and served alongside new potatoes cooked with spring onions and tamarind paste. This tasty main is perfect for one or two and can be ready in under half an hour.
    </string>

    <string name="quantity">Quantity</string>

    <string name="id">Login ID</string>

    <string name="password">Password</string>

    <string name="login">Login</string>

    <string name="forgot_pass">Forgot Pass</string>
    <string name="title_activity_abc">abc</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_chef">Chef</string>

    <string name="order_page">ORDERS</string>

    <string name="same_order">SAME ORDER</string>

    <string name="table_id">TABLE ID</string>

    <string name="table_order">
    - Tikka \n
    - Boti \n
    - Kabab \n
    - Paratha</string>

    <string name="table_same_order">Tikka</string>

    <string name="reg_chef">REGISTER CHEF</string>

    <string name="user_name">UserName</string>

    <string name="register">Register</string>

    <string name="email">Email</string>

    <string name="number">Number</string>

    <string name="gender">Gender</string>

    <string name="address">Address</string>

    <string name="chef">CHEF</string>

    <string name="admin">ADMIN</string>
    <string name="item_name">Name</string>
    <string name="item_price">Price</string>
    <string name="item_image">Image</string>
    <string name="item_desc">Description</string>
    <string name="add_item">Add Item</string>

    <string name="register_chef">Register Chef</string>

    <string name="manage_inventory">Manage Inventory</string>

    <string name="items">Manage Items</string>

    <string name="cat">Manage Catagories</string>

    <string name="add_item_db">ADD ITEM</string>

    <string name="add_inventory_item_db">ADD INVENTORY ITEM</string>

    <string name="update_inventory_item_db">UPDATE INVENTORY ITEM</string>

    <string name="update_item">UPDATE ITEM</string>

    <string name="delete_item">DELETE ITEM</string>

    <string name="ready_orders">READY ORDERS</string>

    <string name="del_confirmation">Are You Sure ?</string>

    <string name="inventory_item_id">ID</string>

    <string name="inventory_item_stock">Stock</string>

    <string name="inventory_item_supplier">Supplier</string>

    <string name="inventory_item_unit">Unit</string>

    <string name="inventory">INVENTORY</string>

    <string-array name="sign_out">
        <item>Sign Out</item>
    </string-array>

</resources>
